
  The following functions now have vector versions.
  - double-precision cosine: cos
  - single-precision cosine: cosf
  - double-precision logarithm: log
  - single-precision logarithm: logf
  - double-precision sine: sin
  - single-precision sine: sinf
  - double-precision sincos: sincos
  - single-precision sincos: sincosf
  - double-precision exp: exp
  - single-precision exp: expf

  GCC support for auto-vectorization of functions on PPC64 is not yet
  available. Until that is done, the new vector math functions are
  inaccessible to applications.

  Library libmvec is built by default for PPC64. Disable its creation by
  passing flag --disable-mathvec to configure.

  The library ABI specification is x86_64 Vector Function ABI.
  More information on libmvec including a link to the ABI document is at:
  <https://sourceware.org/glibc/wiki/libmvec>

* Unicode 12.0.0 Support: Character encoding, character type info, and
  transliteration tables are all updated to Unicode 12.0.0, using
  generator scripts contributed by Mike FABIAN (Red Hat).

* The dynamic linker accepts the --preload argument to preload shared
  objects, in addition to the LD_PRELOAD environment variable.

* On Linux, the gettid function has been added.

* Minguo (Republic of China) calendar support has been added as an
  alternative calendar for the following locales: zh_TW, cmn_TW, hak_TW,
  nan_TW, lzh_TW.

* The entry for the new Japanese era has been added for ja_JP locale.

Deprecated and removed features, and other changes affecting compatibility:

* The functions clock_gettime, clock_getres, clock_settime,
  clock_getcpuclockid, clock_nanosleep were removed from the librt library
  for new applications (on architectures which had them).  Instead, the
  definitions in libc will be used automatically, which have been available
  since glibc 2.17.

* The obsolete and never-implemented XSI STREAMS header files <stropts.h>
  and <sys/stropts.h> have been removed.
